--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
       });
     </script>
     <script src="/maska-nomera.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </body>
 </html>
