--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="modal__content" style="display: none" id="content2">
         <div id="div1">
-          <img src="/icon.svg" alt="/" />
+          <img src="./icon.svg" alt="/" />
           <h2>Спасибо!</h2>
           <h3>Ваш отзыв был отправлен</h3>
           <button class="succsess_button">OK</button>
